add instructions to best ending tacker html file

--- a/stream-tools/best_ending.html
+++ b/stream-tools/best_ending.html
@@ -1,3 +1,15 @@
+<!-- 
+    Instructions:
+        1. Add OBS browser source
+        2. Check local file checkbox
+        3. Browse for this HTML file
+        4. Set width to something 275px or greater, height to 350px or greater
+        5. Set the page permissions dropdown to "no access to obs"
+        6. Hit Ok, then crop the new source above the white line
+        7. Resize as necessary (may want to set scale filtering)
+        8. Right click the new browser source, pick interact
+        9. Use the interact window to track the run. It can be resized.
+ -->
 <!DOCTYPE html>
 <html lang="en">
 
